[gd_scene load_steps=12 format=2]

[ext_resource path="res://entities/UCL/UCLView.gd" type="Script" id=1]
[ext_resource path="res://images/background.jpg" type="Texture" id=2]
[ext_resource path="res://images/logo_small.png" type="Texture" id=3]
[ext_resource path="res://images/newUCL.png" type="Texture" id=4]
[ext_resource path="res://fonts/OpenSans_Normal.tres" type="DynamicFont" id=5]
[ext_resource path="res://images/selectworldbg.png" type="Texture" id=6]
[ext_resource path="res://images/worldNameBanner.png" type="Texture" id=7]
[ext_resource path="res://images/nextPage.png" type="Texture" id=8]
[ext_resource path="res://images/back.png" type="Texture" id=9]
[ext_resource path="res://images/frames/loading/Loading.tres" type="SpriteFrames" id=10]
[ext_resource path="res://images/modal_box.png" type="Texture" id=11]

[node name="UCLView" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 510.394, 298.801 )
scale = Vector2( 0.853, 0.501 )
texture = ExtResource( 2 )

[node name="LearnEZ" type="Sprite" parent="."]
position = Vector2( 179.55, 78.85 )
texture = ExtResource( 3 )

[node name="newLevel" type="TouchScreenButton" parent="."]
position = Vector2( 832.304, 63.9216 )
normal = ExtResource( 4 )

[node name="header" type="RichTextLabel" parent="."]
margin_left = 392.331
margin_top = 74.0248
margin_right = 937.331
margin_bottom = 158.025
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "USER CREATED LEVEL"

[node name="UCLs" type="Node" parent="."]
editor/display_folded = true

[node name="ucl1" type="TouchScreenButton" parent="UCLs"]
position = Vector2( 102.028, 135.465 )
scale = Vector2( 0.41, 0.41 )
normal = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="UCLs/ucl1"]
position = Vector2( 246.877, 397.499 )
scale = Vector2( 1.412, 0.842 )
texture = ExtResource( 7 )

[node name="ucl2" type="TouchScreenButton" parent="UCLs"]
position = Vector2( 406.396, 137.18 )
scale = Vector2( 0.41, 0.41 )
normal = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="UCLs/ucl2"]
position = Vector2( 246.877, 397.499 )
scale = Vector2( 1.412, 0.842 )
texture = ExtResource( 7 )

[node name="ucl3" type="TouchScreenButton" parent="UCLs"]
position = Vector2( 712.479, 136.323 )
scale = Vector2( 0.41, 0.41 )
normal = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="UCLs/ucl3"]
position = Vector2( 246.877, 397.499 )
scale = Vector2( 1.412, 0.842 )
texture = ExtResource( 7 )

[node name="ucl4" type="TouchScreenButton" parent="UCLs"]
position = Vector2( 114.944, 338.883 )
scale = Vector2( 0.41, 0.41 )
normal = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="UCLs/ucl4"]
position = Vector2( 246.877, 397.499 )
scale = Vector2( 1.412, 0.842 )
texture = ExtResource( 7 )

[node name="ucl5" type="TouchScreenButton" parent="UCLs"]
position = Vector2( 422.686, 342.95 )
scale = Vector2( 0.41, 0.41 )
normal = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="UCLs/ucl5"]
position = Vector2( 246.877, 397.499 )
scale = Vector2( 1.412, 0.842 )
texture = ExtResource( 7 )

[node name="ucl6" type="TouchScreenButton" parent="UCLs"]
position = Vector2( 734.899, 342.801 )
scale = Vector2( 0.41, 0.41 )
normal = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="UCLs/ucl6"]
position = Vector2( 246.877, 397.499 )
scale = Vector2( 1.412, 0.842 )
texture = ExtResource( 7 )

[node name="nextPage" type="TouchScreenButton" parent="."]
position = Vector2( 569.411, 557.253 )
scale = Vector2( 0.846897, 0.807527 )
normal = ExtResource( 8 )

[node name="previousPage" type="TouchScreenButton" parent="."]
position = Vector2( 360.795, 559.04 )
scale = Vector2( 1, 0.755035 )
normal = ExtResource( 9 )

[node name="loading" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="loadingAnimation" type="AnimatedSprite" parent="loading"]
position = Vector2( 563.348, 334.743 )
z_index = 1
frames = ExtResource( 10 )
animation = "loading"
frame = 20
playing = true

[node name="loadingBackground" type="Sprite" parent="loading"]
position = Vector2( 504.392, 329.296 )
scale = Vector2( 2.19481, 1 )
texture = ExtResource( 11 )

[node name="UCLTitle" type="Sprite" parent="."]
z_index = 1

[node name="UCLTitle1" type="RichTextLabel" parent="UCLTitle"]
margin_left = 108.0
margin_top = 268.0
margin_right = 295.0
margin_bottom = 308.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="UCLTitle2" type="RichTextLabel" parent="UCLTitle"]
margin_left = 411.511
margin_top = 270.572
margin_right = 598.511
margin_bottom = 310.572
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="UCLTitle3" type="RichTextLabel" parent="UCLTitle"]
margin_left = 721.881
margin_top = 267.143
margin_right = 908.881
margin_bottom = 307.143
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="UCLTitle4" type="RichTextLabel" parent="UCLTitle"]
margin_left = 120.541
margin_top = 471.758
margin_right = 307.541
margin_bottom = 511.758
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="UCLTitle5" type="RichTextLabel" parent="UCLTitle"]
margin_left = 431.231
margin_top = 474.628
margin_right = 618.231
margin_bottom = 514.628
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="UCLTitle6" type="RichTextLabel" parent="UCLTitle"]
margin_left = 741.958
margin_top = 474.139
margin_right = 928.958
margin_bottom = 514.139
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
